# power-applet

./: ChangeLog  Makefile.am  README.md  configure.in  power-applet.spec.in
po/: POTFILES.in  cat-id-tbl.c  da.gmo  da.po  power-applet.pot
src/: Makefile.am  power-applet-strings.c  power-applet.c  power-applet.desktop  power-applet.glade  power-applet.gnorba  powerm.c  powerm.h  test-libpowerm.c
themes/: Makefile.am
themes/default/: Makefile.am
themes/gauge/: Makefile.am
themes/lcd/: Makefile.am
themes/lcd-translucent/: Makefile.am
themes/leds/: Makefile.am
