NULL=
THEME=gauge

pixmapdir = $(datadir)/pixmaps/$(PACKAGE)/$(THEME)
pixmap_DATA = 			\
	battery-0-0.png    	\
	battery-1-20.png   	\
	battery-21-40.png  	\
	battery-41-60.png	\
	battery-61-80.png  	\
	battery-81-100.png  	\
	charging-0-0.png	\
	charging-1-20.png   	\
	charging-21-40.png  	\
	charging-41-60.png	\
	charging-61-80.png	\
	charging-81-100.png	\
	$(NULL)

EXTRA_DIST =		\
	$(pixmap_DATA)	\
	$(NULL)
