NULL=
THEME=lcd-translucent

pixmapdir = $(datadir)/pixmaps/$(PACKAGE)/$(THEME)
pixmap_DATA = 			\
	battery-0-0.png    	\
	battery-1-10.png   	\
	battery-11-20.png  	\
	battery-21-30.png  	\
	battery-31-40.png  	\
	battery-41-50.png	\
	battery-51-60.png  	\
	battery-61-70.png  	\
	battery-71-80.png  	\
	battery-81-90.png  	\
	battery-91-100.png 	\
	charging-0-0.png	\
	charging-1-10.png   	\
	charging-11-20.png  	\
	charging-21-30.png  	\
	charging-31-40.png	\
	charging-41-50.png	\
	charging-51-60.png	\
	charging-61-70.png	\
	charging-71-80.png	\
	charging-81-90.png	\
	charging-91-100.png	\
	$(NULL)

EXTRA_DIST =		\
	$(pixmap_DATA)	\
	$(NULL)
