NULL=
THEME=leds

pixmapdir = $(datadir)/pixmaps/$(PACKAGE)/$(THEME)
pixmap_DATA = 			\
	battery-0-0.png    	\
	battery-1-25.png   	\
	battery-26-50.png  	\
	battery-51-75.png  	\
	battery-76-100.png  	\
	charging-0-0.png    	\
	charging-1-25.png   	\
	charging-26-50.png  	\
	charging-51-75.png  	\
	charging-76-100.png  	\
	$(NULL)

EXTRA_DIST =		\
	$(pixmap_DATA)	\
	$(NULL)
